Fixed A Bug Where The Mobile Fix Applied Previous To Graphically Enchance Different Resolutions With Left And Right Spacing Actually Caused The Widescreen Mode of Larger Resolution To Shrink The Viewsize of All Features, So This Was Fixed In This Update By Adding Higher Resolutions And Changing Resolution Sizes.

--- a/css/global.css
+++ b/css/global.css
@@ -23,7 +23,7 @@ body {
 
 }
 
-@media screen and (min-width: 1040px) {
+@media screen and (min-width: 1040px) and (max-width: 1320px) {
 
 body {
 	margin: 0 auto;
@@ -31,6 +31,19 @@ body {
 	padding-bottom: 0px;
 	padding-left: 2%;
 	padding-right: 2%;
+	background-color: #202020;
+	min-width: 320px;
+	max-width: 1320px;
+	color: #E6E6E6;
+}
+
+}
+
+@media screen and (min-width: 1321px) {
+
+body {
+	margin: 0 auto;
+	padding: 0px;
 	background-color: #202020;
 	min-width: 320px;
 	max-width: 1320px;
